GIFs will appear still can click to animate and back, CSS styling

--- a/giphy.html
+++ b/giphy.html
@@ -16,8 +16,9 @@
     <body>
         <div class="container">
 
-
-            <h1>Favorite Netflix Shows</h1>
+            <div>
+                <h1>Favorite Netflix GIFs Here</h1>
+            </div>
             <form id="netflix-form">
                 <label for="show-input">Type your favorite show here:</label>
                 <input type="text" id="show-input" /><br>
