--- a/giphy.html
+++ b/giphy.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <title>GIPHY HW</title>
+        <title>NetflixGIPHYAPI</title>
         <!-- jQuery -->
         <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
         <!-- Script -->
@@ -26,6 +26,8 @@
                 <!-- Button triggers new movie to be added -->
                 <input id="add-show" type="submit" value="Click here to add your favorite show">
             </form>
+
+            <h3>Click GIFs to animate or freeze</h3>
             <!-- Shows will get dumped here -->
             <div id="shows-view">
 
