--- a/giphy.html
+++ b/giphy.html
@@ -27,7 +27,7 @@
                 <input id="add-show" type="submit" value="Click here to add your favorite show">
             </form>
 
-            <h3>Click GIFs to animate or freeze</h3>
+            <h3>"Click" GIFs to animate or freeze</h3>
             <!-- Shows will get dumped here -->
             <div id="shows-view">
 
@@ -37,14 +37,15 @@
 
 
 
-        </div>
-        <div>
-            <img src="https://d2ygrtdi28m8fp.cloudfront.net/corporateAssets/Netflix_Logo_DigitalVideo_0701.jpg" width=500px></img>
-        </div>
+
+            <div>
+                <img src="https://d2ygrtdi28m8fp.cloudfront.net/corporateAssets/Netflix_Logo_DigitalVideo_0701.jpg" width=500px></img>
+            </div>
     </body>
     <!-- jQuery -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Script -->
     <script src="giphy.js"></script>
+    </div>
 
 </html>
